--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dnd": "^14.0.2",
     "react-dnd-html5-backend": "^14.0.0",
     "react-dom": "^17.0.2",
+    "react-frame-component": "^5.1.0",
     "react-router-dom": "^5.2.0"
   },
   "scripts": {
