--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@babel/preset-env": "^7.13.10",
     "@babel/preset-react": "^7.12.13",
     "babel-loader": "^8.2.2",
-    "css-loader": "^5.1.3",
+    "css-loader": "^6.2.0",
     "grunt": "^1.4.1",
     "grunt-contrib-clean": "^2.0.0",
     "grunt-contrib-compress": "^1.5.0",
@@ -30,10 +30,12 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "date-fns": "^2.23.0",
     "immutability-helper": "^3.1.1",
     "loadable-components": "^2.2.3",
     "react": "^17.0.2",
     "react-colorful": "^5.3.0",
+    "react-date-range": "^1.3.0",
     "react-dnd": "^14.0.2",
     "react-dnd-html5-backend": "^14.0.0",
     "react-dom": "^17.0.2",
