--- a/package.json
+++ b/package.json
@@ -30,12 +30,12 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
-    "date-fns": "^2.23.0",
     "immutability-helper": "^3.1.1",
     "loadable-components": "^2.2.3",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-colorful": "^5.3.0",
-    "react-date-range": "^1.3.0",
+    "react-datetime": "^3.0.4",
     "react-dnd": "^14.0.2",
     "react-dnd-html5-backend": "^14.0.0",
     "react-dom": "^17.0.2",
