--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "immutability-helper": "^3.1.1",
     "loadable-components": "^2.2.3",
+    "mini-css-extract-plugin": "^2.1.0",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-colorful": "^5.3.0",
