--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "grunt-version": "^1.3.1",
     "grunt-wp-i18n": "^1.0.3",
     "grunt-wp-readme-to-markdown": "^2.0.1",
+    "jest": "^27.0.6",
     "sass": "^1.35.1",
     "sass-loader": "^12.1.0",
     "style-loader": "^2.0.0",
@@ -46,6 +47,7 @@
   "scripts": {
     "serve": "webpack --mode development",
     "build": "webpack --mode production",
-    "makepot": "wp i18n make-pot . languages/wp-survey-funnel.pot"
+    "makepot": "wp i18n make-pot . languages/wp-survey-funnel.pot",
+    "test": "jest"
   }
 }
