--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "react-dnd-html5-backend": "^14.0.0",
     "react-dom": "^17.0.2",
     "react-frame-component": "^5.1.0",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "react-select": "^4.3.1"
   },
   "scripts": {
     "serve": "webpack --mode development",
