Added test config for jest in react

--- a/.babelrc
+++ b/.babelrc
@@ -3,5 +3,10 @@
 		"@babel/preset-env",
 		"@babel/preset-react"
 	],
-	"plugins": ["@babel/plugin-syntax-dynamic-import"]
+	"plugins": ["@babel/plugin-syntax-dynamic-import"],
+	"env": {
+		"test": {
+		  "plugins": ["@babel/plugin-transform-runtime"]
+		}
+	}
  }
