--- a/.github/workflows/js-coverage.yml
+++ b/.github/workflows/js-coverage.yml
@@ -31,4 +31,4 @@ jobs:
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1
         with:
-          token: b9190d10-efa6-4420-9888-b8c5048e0a51
+          token: 'b9190d10-efa6-4420-9888-b8c5048e0a51'
