--- a/package.json
+++ b/package.json
@@ -36,10 +36,15 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
     "immutability-helper": "^3.1.1",
+    "jest-fetch-mock": "^3.0.3",
     "loadable-components": "^2.2.3",
     "mini-css-extract-plugin": "^2.1.0",
     "moment": "^2.29.1",
+    "node-fetch": "^2.6.1",
     "react": "^17.0.2",
     "react-colorful": "^5.3.0",
     "react-datetime": "^3.0.4",
