--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
+    "@wordpress/hooks": "^3.2.0",
     "immutability-helper": "^3.1.1",
     "jest-fetch-mock": "^3.0.3",
     "loadable-components": "^2.2.3",
