--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
+    "@wordpress/scripts": "^18.0.0",
     "immutability-helper": "^3.1.1",
     "jest-fetch-mock": "^3.0.3",
     "loadable-components": "^2.2.3",
@@ -46,6 +47,7 @@
     "moment": "^2.29.1",
     "node-fetch": "^2.6.1",
     "react": "^17.0.2",
+    "react-async-select": "^0.2.6",
     "react-colorful": "^5.3.0",
     "react-datetime": "^3.0.4",
     "react-dnd": "^14.0.2",
