Fixed minor issues

--- a/.github/workflows/pr-code-sniff.yml
+++ b/.github/workflows/pr-code-sniff.yml
@@ -45,7 +45,7 @@ jobs:
         run: composer install
 
       - name: Init DB and WP
-        run: ./tests/bin/install.sh wpadcenter_test root root 127.0.0.1 latest
+        run: ./tests/bin/install.sh surveyfunnel_lite_test root root 127.0.0.1 latest
 
       - name: Run code sniff
         run: RUN_PHPCS=1 bash ./tests/bin/phpcs.sh
