--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "style-loader": "^2.0.0",
     "webpack": "^5.27.0",
     "webpack-cli": "^4.5.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^3.11.2",
+    "jest-environment-jsdom": "~27.0"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
