--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-loader": "^8.2.2",
     "css-loader": "^6.2.0",
     "enzyme": "^3.11.0",
+    "error-overlay-webpack-plugin": "^1.0.0",
     "grunt": "^1.4.1",
     "grunt-contrib-clean": "^2.0.0",
     "grunt-contrib-compress": "^1.5.0",
@@ -27,14 +28,14 @@
     "grunt-wp-readme-to-markdown": "^2.0.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.1.0",
+    "jest-environment-jsdom": "~27.0",
     "react-test-renderer": "^17.0.2",
     "sass": "^1.35.1",
     "sass-loader": "^12.1.0",
     "style-loader": "^2.0.0",
     "webpack": "^5.27.0",
     "webpack-cli": "^4.5.0",
-    "webpack-dev-server": "^3.11.2",
-    "jest-environment-jsdom": "~27.0"
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
